Fix styling of modal body to match slight vertical off-center of prototype

--- a/src/Modal.module.css
+++ b/src/Modal.module.css
@@ -41,7 +41,7 @@
   align-items: center;
   padding: 60px 112px 40px;
   position: absolute;
-  top: 50%;
+  top: 45.7%;
   left: 50%;
   bottom: unset;
   transform: translate(-50%, -50%);
@@ -61,8 +61,9 @@
 
 @media (max-width: 540px) {
   .modal-body {
-    padding: 72px 30px 30px;
     max-width: 90%;
+    padding: 72px 30px 30px;
+    top: 44.2%;
   }
 }
 
